--- a/src/main/resources/fxml/AdminMenu/AdminTransactionMenu.fxml
+++ b/src/main/resources/fxml/AdminMenu/AdminTransactionMenu.fxml
@@ -16,5 +16,7 @@
       <Label layoutX="115.0" layoutY="293.0" text="Transaction" />
       <ComboBox fx:id="getTransaction" layoutX="217.0" layoutY="289.0" prefWidth="150.0" />
       <ListView fx:id="transactionList" layoutX="176.0" layoutY="326.0" prefHeight="200.0" prefWidth="233.0" />
+      <Label layoutX="189.0" layoutY="526.0" prefHeight="17.0" prefWidth="55.0" text="receiptId" />
+      <TextField fx:id="receiptId" layoutX="244.0" layoutY="522.0" onKeyPressed="#receiptTyped" />
    </children>
 </Pane>
