--- a/src/main/resources/fxml/AuctionMenu.fxml
+++ b/src/main/resources/fxml/AuctionMenu.fxml
@@ -40,6 +40,7 @@
       <TextField fx:id="bidValue" layoutX="376.0" layoutY="613.0" promptText="Enter a Value" style="-fx-border-color: #94a8b3;" />
       <Hyperlink layoutX="435.0" layoutY="514.0" onAction="#learnMore" prefHeight="23.0" prefWidth="192.0" text="Click to learn more about this item" />
       <Label fx:id="errorLabel" layoutX="651.0" layoutY="674.0" prefHeight="17.0" prefWidth="378.0" />
-      <Button fx:id="refresh" layoutX="14.0" layoutY="46.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="51.0" styleClass="myBlueButton" text="Refresh" />
+      <Button fx:id="refresh" layoutX="14.0" layoutY="46.0" mnemonicParsing="false" onAction="#refresh" prefHeight="22.0" prefWidth="51.0" styleClass="myBlueButton" text="Refresh" />
+      <Button fx:id="loginLogout" layoutX="14.0" layoutY="77.0" mnemonicParsing="false" onAction="#loginLogout" prefHeight="22.0" prefWidth="51.0" styleClass="myBlueButton" text="Button" />
    </children>
 </AnchorPane>
