--- a/src/main/resources/fxml/SellerMenu/SellerStartAuctionMenu.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerStartAuctionMenu.fxml
@@ -10,7 +10,7 @@
       <ListView fx:id="listView" layoutX="30.0" layoutY="129.0" onMouseClicked="#select" prefHeight="338.0" prefWidth="310.0" style="-fx-border-color: #94a8b3;" />
       <Label layoutX="31.0" layoutY="106.0" prefHeight="17.0" prefWidth="100.0" text="All Products" />
       <Label layoutX="460.0" layoutY="133.0" prefHeight="17.0" prefWidth="47.0" text="Item ID:" />
-      <Label layoutX="414.0" layoutY="198.0" prefHeight="17.0" prefWidth="100.0" text="Duration (Hours):" />
+      <Label layoutX="401.0" layoutY="198.0" prefHeight="17.0" prefWidth="113.0" text="Duration (Minutes):" />
       <TextField fx:id="duration" layoutX="526.0" layoutY="194.0" prefHeight="25.0" prefWidth="174.0" promptText="Enter an Integer" styleClass="underlinedTextField" />
       <TextField fx:id="startPrice" layoutX="526.0" layoutY="258.0" prefHeight="25.0" prefWidth="174.0" promptText="Enter a price" styleClass="underlinedTextField" />
       <Label layoutX="430.0" layoutY="262.0" prefHeight="17.0" prefWidth="82.0" text="Starting Price:" />
