background ha avaz shodan (1)

--- a/src/main/resources/Styles.CSS
+++ b/src/main/resources/Styles.CSS
@@ -125,6 +125,10 @@
         -fx-background-image: url("design/userZone.png");
     }
 
+    .mainMenuBackground{
+        -fx-background-image: url("design/mainMenuBack.png");
+    }
+
     .myTextField{
       -fx-border-color: transparent;
       -fx-border-width: 0 0 0 0;
